--- a/micro-client.properties
+++ b/micro-client.properties
@@ -14,8 +14,8 @@ spring.datasource.password=${DB_PASSWORD:netec123}
 eureka.client.service-url.defaultZone=http://${IP_EUREKA:localhost}:9999/eureka
 
 #IdP config
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost/auth/realms/netec
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost/auth/realms/netec/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://40.74.249.41/auth/realms/netec
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://40.74.249.41/auth/realms/netec/protocol/openid-connect/certs
 
 #JWT Config
 jwt.auth.converter.resource-id=myclient
